start on package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "author": "",
   "license": "ISC",
+  "start": "node server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
