--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "npm run /server/server.js"
+    "start": "node server/server.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
