--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongodb": "^3.1.13",
-    "p5": "^0.8.0"
+    "p5": "^0.8.0",
+    "passport": "^0.4.1"
   },
   "engines": {
     "node": "8.12.0"
