--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.16.4",
     "mongodb": "^3.1.13",
     "p5": "^0.8.0",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "passport-heroku": "^1.0.0",
+    "passport-local": "^1.0.0"
   },
   "engines": {
     "node": "8.12.0"
